--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@
 }
 
 body {
-    background-color: #3b3b98;
-    color: white;
+    background-color: #daf4fa;
+    color: #000;
     font-family: "Muli", sans-serif;
     display: flex;
     padding: 10px;
@@ -25,15 +25,17 @@ h2 {
 }
   
 .container {
-    background-color: #23235b;
+    background-color: #e5e5e881;
+    border: solid 0.02rem #808080;
+    border-radius: 10px;
     padding: 20px;
     width: 350px;
     max-width: 100%;
-    box-shadow: 0 2px 10px rgba(255, 255, 255, 0.2);
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.2), 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .result-container {
-    background-color: #00000066;
+    background-color: #b9b7b766;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -43,6 +45,7 @@ h2 {
     padding: 12px 10px;
     height: 50px;
     width: 100%;
+    border-radius: 5px;
 }
 
 .result-container .btn {
@@ -52,10 +55,12 @@ h2 {
     width: 40px;
     height: 40px;
     font-size: 20px;
+    border-radius: 5px;
     transition: 0.3s ease;
 }
 .result-container .btn:hover {
-    background-color: #ffffff3f;
+    font-size: 21px;
+    background-color: #2592d2;
     transform: scale(1.05);
 }
 
@@ -64,10 +69,14 @@ h2 {
     max-width: calc(100% - 40px);
 }
 
+#length:active {
+    outline: #2592d2;
+}
+
 .btn {
     border: none;
-    background-color: #3b3b98;
-    color: #fff;
+    background-color: #4c9bf0;
+    color: white;
     font-size: 16px;
     padding: 8px 12px;
     cursor: pointer;
@@ -77,11 +86,13 @@ h2 {
 .btn-large {
     display: block;
     width: 100%;
-    transition: 0.3s ease;
+    transition: 0.4s ease;
+    border-radius: 5px;
 }
 
 .btn-large:hover {
-    background-color: #ffffff3f;
+    letter-spacing: 1px;
+    background-color: #2592d2;
     transform: scale(1.02);
 }
 
