--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #daf4fa;
+    background-color: #c2ddf9;
     color: #000;
     font-family: "Muli", sans-serif;
     display: flex;
@@ -25,7 +25,7 @@ h2 {
 }
   
 .container {
-    background-color: #e5e5e881;
+    background-color: #81bbf661;
     border: solid 0.02rem #808080;
     border-radius: 10px;
     padding: 20px;
@@ -35,7 +35,7 @@ h2 {
 }
 
 .result-container {
-    background-color: #b9b7b766;
+    background-color: #fffdfd;
     display: flex;
     justify-content: flex-start;
     align-items: center;
